fix navigation bar spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
     color: #ffffff;
     font-size: 32px;
   }
-  #navbarNavAlt {
+  #navbarNavAltMarkup {
     justify-content: center;
   }
   nav .nav-link {
